test/conformance/chainsaw/webhooks/expected-webhooks/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: expected-webhooks
spec:
  concurrent: true
  namespace: default
  steps:
  - name: step-01
    try:
    - assert:
        file: webhooks.yaml
